checkpatch: update script & conf

--- a/checkpatch/.checkpatch.conf
+++ b/checkpatch/.checkpatch.conf
@@ -75,3 +75,13 @@
 # We have the FSF address in a lot of our headers at the moment,
 # should clean that up one day but ignoring for now.
 --ignore FSF_MAILING_ADDRESS
+
+# @todo FSF we made some of these, but see what happens...
+#--ignore BLOCK_COMMENT_STYLE
+#--ignore GLOBAL_INITIALISERS
+#--ignore UNSPECIFIED_INT
+#--ignore LONG_LINE
+#--ignore SUSPECT_CODE_INDENT
+#--ignore CONSTANT_COMPARISON
+#--ignore LINE_SPACING
+#--ignore TYPECAST_INT_CONSTANT
